--- a/public/chat.html
+++ b/public/chat.html
@@ -7,8 +7,8 @@
     <meta name="description"
         content="Talk with new people and make friends. TextRandom is a free random chat website, and no login registration is required. Chat anonymously and meet new people. Talk to strangers, and chat with boys/girls. Instant chat with the global chat community. Free and safe real-time texting online. This chat app is free to use, and legit. It does not collect any data or misuse user's information. You are completely safe to use and visit our site.">
     <title>Talk to Strangers - TextRandom</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
 </head>
 
 <body>
