--- a/public/chat.html
+++ b/public/chat.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="heading">
-        <img src="favicon.png" alt="logo" class="logo">
+        <img src="./favicon.png" alt="logo" class="logo">
         <h1>Text Random - Talk to Strangers</h1>
     </div>
 
@@ -30,8 +30,8 @@
 
     <!-- Introduction to Site Section -->
     
-    <audio id="matchSound" src="match-sound.wav" preload="auto"></audio>
-    <audio id="messageSound" src="message-sound.wav" preload="auto"></audio>
+    <audio id="matchSound" src="./match-sound.wav" preload="auto"></audio>
+    <audio id="messageSound" src="./message-sound.wav" preload="auto"></audio>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
