--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="description"
         content="Talk with new people and make friends. TextRandom is a free random chat website, and no login registration is required. Chat anonymously and meet new people. Talk to strangers, and chat with boys/girls. Instant chat with the global chat community. Free and safe real-time texting online. This chat app is free to use, and legit. It does not collect any data or misuse user's information. You are completely safe to use and visit our site.">
     <title>Talk to Strangers - TextRandom</title>
-    <link rel="stylesheet" href="./index.css">
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="./public/index.css">
+    <link rel="icon" type="image/x-icon" href="./public/favicon.png">
 
 </head>
 
@@ -58,7 +58,7 @@
                     pass the time, TextRandom is your go-to solution for instant, safe, and genuine connections.</p>
 
             </div>
-            <img src="display_b.jpg" alt="Girl texting." class="display">
+            <img src="./public/display_b.jpg" alt="Girl texting." class="display">
 
 
         </div>
@@ -80,7 +80,7 @@
                         effortless and enjoyable user experience.</li>
                 </ul>
             </div>
-            <img src="display_d.jpg" alt="Girl texting." class="display">
+            <img src="./public/display_d.jpg" alt="Girl texting." class="display">
 
         </div>
 
@@ -101,7 +101,7 @@
                         that works perfectly in portrait mode. Chat on the go, anytime, anywhere.</li>
                 </ul>
             </div>
-            <img src="display_c.jpg" alt="Girl texting." class="display">
+            <img src="./public/display_c.jpg" alt="Girl texting." class="display">
         </div>
 
         <div class="intro">
@@ -114,7 +114,7 @@
                     anonymous chatting.</p>
                 <a href="/chat" class="start-chat-btn">Start Chat</a>
             </div>
-            <img src="display_e.jpg" alt="Girl texting." class="display">
+            <img src="./public/display_e.jpg" alt="Girl texting." class="display">
         </div>
 
         <div class="intro" id="contact">
@@ -125,7 +125,7 @@
                     connect with strangers safely and securely.</p>
                 <b>Email: saffrontempo@gmail.com</b>
             </div>
-            <img src="display_f.jpeg" alt="Girl texting." class="display">
+            <img src="./public/display_f.jpeg" alt="Girl texting." class="display">
 
         </div>
 
